--- a/style.css
+++ b/style.css
@@ -167,16 +167,21 @@
   display: inline-flex;
   align-items: center;
   gap: 8px;
-  background-color: #006ba6;
+  background-color: #364350;
   color: white;
   font-weight: 500;
   padding: 10px 18px;
   border-radius: 10px;
   text-decoration: none;
-  margin-bottom: 1.2rem;
   transition: background-color 0.3s ease;
+  transition: background 0.3s ease, transform 0.2s ease;
 }
 
 .save-contact-btn:hover {
-  background-color: #004f7d;
+  background-color: #5d7287;
+}
+
+.save-contact-btn i {
+  width: 60px;
+  font-size: 2.5rem;
 }
